--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "motion": "^12.23.26",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-photo-view": "^1.2.7",
     "react-router-dom": "^6.30.2",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
