--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^19.0.0",
     "react-photo-view": "^1.2.7",
     "react-router-dom": "^6.30.2",
+    "react-top-loading-bar": "^3.0.2",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
