--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-photo-view": "^1.2.7",
     "react-router-dom": "^6.30.2",
     "react-top-loading-bar": "^3.0.2",
+    "recharts": "^2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
