--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "motion": "^12.34.0",
     "radix-ui": "^1.4.3",
     "react": "^19.0.0",
+    "react-canvas-confetti": "^2.0.7",
     "react-dom": "^19.0.0",
     "react-photo-view": "^1.2.7",
     "react-router-dom": "^6.30.2",
