--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tailwindcss/vite": "^4.1.18",
+    "@tanstack/react-query": "^5.90.21",
+    "@tanstack/react-query-devtools": "^5.91.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cobe": "^0.6.5",
+    "es-toolkit": "^1.44.0",
     "json-server": "^0.17.4",
     "lucide-react": "^0.562.0",
-    "motion": "^12.34.0",
+    "motion": "^12.34.3",
     "radix-ui": "^1.4.3",
     "react": "^19.0.0",
     "react-canvas-confetti": "^2.0.7",
