--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "react-top-loading-bar": "^3.0.2",
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^3.4.0",
+    "tailwind-merge": "^3.5.0",
     "tailwindcss": "^4.1.18",
     "vaul": "^1.1.2",
     "zustand": "^5.0.9"
@@ -47,6 +47,8 @@
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react-swc": "^3.8.0",
     "globals": "^16.0.0",
+    "prettier": "^3.8.1",
+    "prettier-plugin-tailwindcss": "^0.7.2",
     "tw-animate-css": "^1.4.0",
     "vite": "^6.3.1"
   }
